--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.9.0",
+    "axios": "^0.19.0",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {}
